- Let there only be one way to wire query to the grouping hits.   Enforce that by requiring it in the constructor. - Carry the DocumentDatabase along, not only the DocusumDefinitionSet.